# qdrant

./: Cargo.toml
docs/redoc/master/: openapi.json
lib/collection/src/: hash_ring.rs
lib/collection/src/collection/: search.rs
lib/collection/src/operations/: snapshot_storage_ops.rs
lib/collection/src/shards/local_shard/: shard_ops.rs
lib/common/common/src/: cpu.rs
lib/common/issues/src/: lib.rs
lib/segment/: Cargo.toml
lib/segment/benches/: sparse_index_build.rs  sparse_index_search.rs
lib/segment/src/: segment.rs  types.rs
lib/segment/src/index/sparse_index/: sparse_vector_index.rs
lib/segment/src/segment_constructor/: segment_constructor_base.rs
lib/segment/src/vector_storage/: chunked_mmap_vectors.rs
lib/segment/src/vector_storage/dense/: appendable_mmap_dense_vector_storage.rs  dynamic_mmap_flags.rs
lib/segment/src/vector_storage/tests/: mod.rs  test_appendable_mmap_multi_dense_vector_storage.rs
lib/segment/tests/integration/: multivector_hnsw_test.rs  sparse_vector_index_search_tests.rs
lib/sparse/: Cargo.toml
lib/sparse/benches/: search.rs
lib/sparse/src/index/: csr.rs  mod.rs  posting_list.rs  posting_list2.rs  search_context.rs
lib/sparse/src/index/inverted_index/: inverted_index_mmap.rs  inverted_index_ram.rs  inverted_index_ram_builder.rs  mod.rs
src/: main.rs
