[package]
name = "sparse"
version = "0.1.0"
authors = [
    "Andrey Vasnetsov <andrey@vasnetsov.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2021"

[dependencies]
common = { path = "../common/common" }
io = { path = "../common/io" }
memory = { path = "../common/memory" }
memmap2 = "0.9.4"
schemars = { workspace = true }
serde = { workspace = true }
tempfile = "3.10.1"
ordered-float = "4.2"
rand = "0.8.5"
validator = { workspace = true }
itertools = "0.12.1"
log = "0.4"
parking_lot = "0.12.1"
bitpacking = "0.9.2"
indicatif = "0.17.8"

[dev-dependencies]
criterion = "0.5"
pprof = { version = "0.12", features = ["flamegraph", "prost-codec"] }

[[bench]]
name = "search"
harness = false
